# Rock-Token

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  rock_server.py  run_all.sh  visualize_occurrences.py
docs/: decisions.md  implementation_plan.md
docs/superpowers/plans/: 2026-04-18-exp2-rock-token-identification.md  2026-04-25-rock-token-identification.md
docs/superpowers/specs/: 2026-04-18-exp2-rock-token-identification-design.md  2026-04-25-rock-token-identification-design.md
results/baseline/: gsm8k.json  humaneval.json  ifeval.json  summary.json
results/identification/onpolicy/: rock_fraction.txt  rock_tokens.csv  rock_tokens.json  rock_tokens_by_count.csv  rock_tokens_by_rate.csv
src/analysis/: eval_aime.py
src/evaluation/: __init__.py  common.py  eval_gsm8k.py  eval_humaneval.py  eval_ifeval.py  eval_mmlu.py  run_baseline.py  summarize_results.py
src/exp_2/: _vllm_subprocess.py  identify_rock_tokens.py  phases.py  scoring.py  utils.py  vllm_generate.py
src/identification/: README.md  __init__.py  config.py  generate.py  identify.py  measure.py  plots.py  prompts.py  run.py
src/masking/: categorize.py  common.py  cumulative.py  eval_aime.py  eval_hmmt.py  eval_ifeval.py  eval_math500.py  groups.py  knockout.py  run_baseline.py  verify_masking.py
stumbling/: get_list.py  random.json  rock.json  rock_vs_control.csv  run_stumb_random.sh
tests/exp_2/: test_analysis.py  test_batching.py  test_scoring.py  test_vllm_generate.py
tests/identification/: test_config.py  test_identify.py  test_measure.py
(+344 files in other folders)
