[project]
name = "chip-rock-token"
version = "0.1.0"
description = "Rock Token: Recalcitrant Token analysis in On-Policy Distillation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.6",
    "transformers>=4.52",
    "datasets>=3.6",
    "rich>=14.0",
    "numpy>=2.2",
    "accelerate>=1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
