[project]
name = "chip-rock-token"
version = "0.1.0"
description = "Rock Token: Recalcitrant Token analysis in On-Policy Distillation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6",
    "transformers>=4.52",
    "datasets>=3.6",
    "rich>=14.0",
    "numpy>=2.2",
    "accelerate>=1.6",
    "matplotlib>=3.9",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
gpu = ["vllm>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
